# jupyter-workspace

./: README.md  notebook.ipynb  pyproject.toml  requirements.txt  server.py
